# codely-agent-ui

./: .gitignore  CODELY.md  README.md  README_JA.md  chat-export-current-2026-01-06-08-12-18-071Z.md
.codely-cli/: settings.json
.specstory/: .gitignore
.specstory/history/: 2026-01-05_19-16Z-unity-agent-client-dependency-removal.md  2026-01-06_09-45Z-`agentwindow-cs`-输入框焦点丢失.md  2026-01-06_19-28Z-后续讨论.md  2026-01-07_06-46Z-tauri-embed菜单显示问题.md  2026-01-07_07-45Z-tauri-window-package-and-web-ui-display.md  2026-01-08_17-01Z-unity-agent-client-ui-file-necessity.md
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/UnityAgentClient/: package.json
ProjectSettings/: ProjectSettings.asset
cn.tuanjie.codely.agent-client/: CODELY.md  LICENSE  README.md  package.json
cn.tuanjie.codely.agent-client/Editor/: AgentSessionPersistence.cs  AgentSettings.cs  AgentSettingsConfig.cs  AgentWindow.cs  EditorMarkdownRenderer.cs  Logger.cs  TaskExtensions.cs  UnityAgentClient.Editor.asmdef  Win32HandleUtil.cs
cn.tuanjie.codely.tauri-window/: package.json
cn.tuanjie.codely.unity-agent-client-ui/: README.md  package.json
cn.tuanjie.codely.unity-agent-client-ui/Editor/: CodelyTauriWindow.Editor.asmdef  CodelyWebUiHostWindow.cs  CodelyWebUiIpcSyncWindow.cs  (+1 more)
cn.tuanjie.codely.unity-agent-client-ui/Editor/WindowSync/native/: CMakeLists.txt  CodelyUnityAgentClientUIWindowSync.cpp
scripts/: check-no-unity-package-build-artifacts.ps1
tauri-ui/: README.md  build-with-cache.ps1  build-with-tools.ps1  installer.nsi  package-lock.json  package.json
(+88 files in other folders)
